5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4057/executions/1684_1880.log
== TEST (2019-05-02 22:26:07) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("Digite um valor inteiro: "))

if m == 1:
	print("janeiro")
elif m == 2: 
	print("fevereiro")
elif m == 3:
	print("marco")
elif m == 4: 
	print("abril")
elif m == 5:
	print("maio")
elif m == 6: 
	print("junho")
elif m == 7:
	print("julho")
elif m == 8: 
	print("agosto")
elif m == 9:
	print("setembro")
elif m == 10: 
	print("outubro")
elif m == 11:
	print("novembro")
elif m == 12:
	print("dezembro")
else :
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:26:16) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("Digite um valor inteiro: "))

if m == 1:
	print("janeiro")
elif m == 2: 
	print("fevereiro")
elif m == 3:
	print("marco")
elif m == 4: 
	print("abril")
elif m == 5:
	print("maio")
elif m == 6: 
	print("junho")
elif m == 7:
	print("julho")
elif m == 8: 
	print("agosto")
elif m == 9:
	print("setembro")
elif m == 10: 
	print("outubro")
elif m == 11:
	print("novembro")
elif m == 12:
	print("dezembro")
else :
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 22:26:28) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("Digite um valor inteiro: "))

if m == 1:
	print("janeiro")
elif m == 2: 
	print("fevereiro")
elif m == 3:
	print("marco")
elif m == 4: 
	print("abril")
elif m == 5:
	print("maio")
elif m == 6: 
	print("junho")
elif m == 7:
	print("julho")
elif m == 8: 
	print("agosto")
elif m == 9:
	print("setembro")
elif m == 10: 
	print("outubro")
elif m == 11:
	print("novembro")
elif m == 12:
	print("dezembro")
else :
	print("numero do mes invalido")
-- EXECUTION TIME:
0.132853
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 22:28:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("Digite um valor inteiro: "))
if ((1<= m) and (m <= 12)):
	if m == 1:
		print("janeiro")
	elif m == 2: 
		print("fevereiro")
	elif m == 3:
		print("marco")
	elif m == 4: 
		print("abril")
	elif m == 5:
		print("maio")
	elif m == 6: 
		print("junho")
	elif m == 7:
		print("julho")
	elif m == 8: 
		print("agosto")
	elif m == 9:
		print("setembro")
	elif m == 10: 
		print("outubro")
	elif m == 11:
		print("novembro")
	elif m == 12:
		print("dezembro")
else :
	print("numero do mes invalido")
-- EXECUTION TIME:
0.108867
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 22:46:28) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("Digite um valor inteiro: "))
if ((1=< m) and (m =< 12)):
	if m == 1:
		print("janeiro")
	elif m == 2: 
		print("fevereiro")
	elif m == 3:
		print("marco")
	elif m == 4: 
		print("abril")
	elif m == 5:
		print("maio")
	elif m == 6: 
		print("junho")
	elif m == 7:
		print("julho")
	elif m == 8: 
		print("agosto")
	elif m == 9:
		print("setembro")
	elif m == 10: 
		print("outubro")
	elif m == 11:
		print("novembro")
	elif m == 12:
		print("dezembro")
else :
	print("numero do mes invalido")
-- EXECUTION TIME:
0.148185
-- ERROR:
  File "/home/codebench/codes/1684/1880/main.py", line 3
    if ((1=< m) and (m =< 12)):
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:46:59) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("Digite um valor inteiro: "))
if ((1=< m) and (m =< 12)):
	if m == 1:
		print("janeiro")
	elif m == 2: 
		print("fevereiro")
	elif m == 3:
		print("marco")
	elif m == 4: 
		print("abril")
	elif m == 5:
		print("maio")
	elif m == 6: 
		print("junho")
	elif m == 7:
		print("julho")
	elif m == 8: 
		print("agosto")
	elif m == 9:
		print("setembro")
	elif m == 10: 
		print("outubro")
	elif m == 11:
		print("novembro")
	elif m == 12:
		print("dezembro")
else :
	print("numero do mes invalido")
-- ERROR:
File "XXXX", line 3
    if ((1=< m) and (m =< 12)):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:47:30) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("Digite um valor inteiro: "))
if ((1<= m) and (m <= 12)):
	if m == 1:
		print("janeiro")
	elif m == 2: 
		print("fevereiro")
	elif m == 3:
		print("marco")
	elif m == 4: 
		print("abril")
	elif m == 5:
		print("maio")
	elif m == 6: 
		print("junho")
	elif m == 7:
		print("julho")
	elif m == 8: 
		print("agosto")
	elif m == 9:
		print("setembro")
	elif m == 10: 
		print("outubro")
	elif m == 11:
		print("novembro")
	elif m == 12:
		print("dezembro")
else :
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:47:38) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("Digite um valor inteiro: "))
if ((1<= m) and (m <= 12)):
	if m == 1:
		print("janeiro")
	elif m == 2: 
		print("fevereiro")
	elif m == 3:
		print("marco")
	elif m == 4: 
		print("abril")
	elif m == 5:
		print("maio")
	elif m == 6: 
		print("junho")
	elif m == 7:
		print("julho")
	elif m == 8: 
		print("agosto")
	elif m == 9:
		print("setembro")
	elif m == 10: 
		print("outubro")
	elif m == 11:
		print("novembro")
	elif m == 12:
		print("dezembro")
else :
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:47:45) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("Digite um valor inteiro: "))
if ((1<= m) and (m <= 12)):
	if m == 1:
		print("janeiro")
	elif m == 2: 
		print("fevereiro")
	elif m == 3:
		print("marco")
	elif m == 4: 
		print("abril")
	elif m == 5:
		print("maio")
	elif m == 6: 
		print("junho")
	elif m == 7:
		print("julho")
	elif m == 8: 
		print("agosto")
	elif m == 9:
		print("setembro")
	elif m == 10: 
		print("outubro")
	elif m == 11:
		print("novembro")
	elif m == 12:
		print("dezembro")
else :
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:47:57) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("Digite um valor inteiro: "))
if ((1<= m) and (m <= 12)):
	if m == 1:
		print("janeiro")
	elif m == 2: 
		print("fevereiro")
	elif m == 3:
		print("marco")
	elif m == 4: 
		print("abril")
	elif m == 5:
		print("maio")
	elif m == 6: 
		print("junho")
	elif m == 7:
		print("julho")
	elif m == 8: 
		print("agosto")
	elif m == 9:
		print("setembro")
	elif m == 10: 
		print("outubro")
	elif m == 11:
		print("novembro")
	elif m == 12:
		print("dezembro")
else :
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 22:48:11) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m = int(input("Digite um valor inteiro: "))
if ((1<= m) and (m <= 12)):
	if m == 1:
		print("janeiro")
	elif m == 2: 
		print("fevereiro")
	elif m == 3:
		print("marco")
	elif m == 4: 
		print("abril")
	elif m == 5:
		print("maio")
	elif m == 6: 
		print("junho")
	elif m == 7:
		print("julho")
	elif m == 8: 
		print("agosto")
	elif m == 9:
		print("setembro")
	elif m == 10: 
		print("outubro")
	elif m == 11:
		print("novembro")
	elif m == 12:
		print("dezembro")
else :
	print("numero de mes invalido")
-- EXECUTION TIME:
0.15145
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
